[Umaaas-api] Add availability endpoint (#109)
### TL;DR

Introduced a new API endpoint called /uma-providers that returns a list of Vasps that are on Umaaas

### What changed?

- Added a new `AvailableVaspsApi` endpoint to retrieve information about VASPs (Virtual Asset Service Providers)
- Added the `Vasp` model to represent VASP information
