# generated/python/umaaas_api/models/get_available_uma_providers200_response.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+"""
+    UMA as a Service (UMAaaS) API
+
+    API for managing global payments to and from UMA addresses.  This service facilitates cross-currency financial transactions using simple human-readable UMA addresses. 
+
+    The version of the OpenAPI document: 2025-05-15
+    Contact: support@lightspark.com
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+from pydantic import BaseModel, ConfigDict, Field
+from typing import Any, ClassVar, Dict, List, Optional
+from umaaas_api.models.uma_provider import UmaProvider
+from typing import Optional, Set
+from typing_extensions import Self
+
+class GetAvailableUmaProviders200Response(BaseModel):
+    """
+    GetAvailableUmaProviders200Response
+    """ # noqa: E501
+    providers: Optional[List[UmaProvider]] = Field(default=None, description="List of available Uma Providers using Umaaas")
+    __properties: ClassVar[List[str]] = ["providers"]
+
+    model_config = ConfigDict(
+        populate_by_name=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of GetAvailableUmaProviders200Response from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+
+        _dict = self.model_dump(
+            mode="json",
+            by_alias=True,
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of each item in providers (list)
+        _items = []
+        if self.providers:
+            for _item_providers in self.providers:
+                if _item_providers:
+                    _items.append(_item_providers.to_dict())
+            _dict['providers'] = _items
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of GetAvailableUmaProviders200Response from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "providers": [UmaProvider.from_dict(_item) for _item in obj["providers"]] if obj.get("providers") is not None else None
+        })
+        return _obj
+
+
